<resources>
    <string name="app_name">bicisupport</string>
    <string name="encuesta_titulo">ENCUESTA DE SATISFACCIÓN</string>
    <string name="encuesta_p1">¿Cuál es su nivel de satisfacción con la atención?</string>
    <string name="encuesta_p2">¿Cuán rápido fue atendid@ por un asesor?</string>
    <string name="encuesta_p3">¿Su problema fue solucionado?</string>
    <string name="encuesta_p4">¿Tiene algún comentario?</string>
    <string name="encuesta_enviar">Enviar Calificación</string>
    <string name="encuesta_si">Si</string>
    <string name="encuesta_no">No</string>
    <string name="encuesta_ayuda">Comentarios sobre la atención</string>
    <string name="novedad_btn_detalle">Detalle</string>
    <string name="novedad_btn_calificacion">Calificación</string>
    <string name="ntipo">Tipo de novedad:</string>
    <string name="nfecha">Fecha:</string>
    <string name="ndireccion">Dirección:</string>
    <string name="ndetalle">Detalle:</string>
    <string name="nempresa">Empresa:</string>
    <string name="nservcios_prestados">Servicios prestados:</string>
    <string name="ncostos">Costos:</string>
    <string name="btitulo">Datos de la Bicicleta</string>
    <string name="bmarca">Marca</string>
    <string name="bcolor">Color</string>
    <string name="bmodelo">Modelo</string>
    <string name="btipo">Tipo</string>
    <string name="bfoto">Cambiar Foto</string>
    <string name="bactualizar">Actualizar Datos</string>
    <string name="bmodeloq">RoadMaster</string>
    <string-array name="bicicletas_marcas">
        <item>Specialized</item>
        <item>Trek</item>
        <item>Scott Bikes</item>
        <item>Cube Bikes</item>
        <item>BCM bikes</item>
        <item>Shimano</item>
        <item>Sigma</item>
    </string-array>
    <string-array name="color_bicicletas">
        <item>Rojo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Fucsia</item>
        <item>Celeste</item>
        <item>Violeta</item>
        <item>Cafe</item>
    </string-array>
    <string-array name="tipo_bibicleta">
        <item>Ruta</item>
        <item>Triatlon </item>
        <item>Ciclomontañismo</item>
        <item>Cyclocross</item>
        <item>Urbana</item>
        <item>Hibridas</item>
    </string-array>
    <string name="LoginText">Iniciar Sesión</string>
    <string name="userText">Usuario</string>
    <string name="passwordText">Contraseña</string>
    <string name="goToRegister">No tienes cuenta? <u>Registrate aquí</u></string>

    <!--Strings activity detalle aliado-->
    <string name="detalleAliado_nombreAliado">Aliado X</string>
    <string name="detalleAliado_tipoAliado">Tipo aliado</string>
    <string name="detalleAliado_direccion">Direccion aliado</string>
    <string name="detalleAliado_contactar">Contactar</string>
    <string name="detalleAliado_imagen">Imagen aliado</string>
    <string name="detalleAliado_serviciosPrestados">Servicios prestados:</string>
    <string name="detalleAliado_ubicacionMapa">Ubicacion en mapa:</string>
    <string name="detalleAliado_Servicios">1. Servicio XXXX \n2. Servicio XXXX \n3. Servicio XXXX \n4. Servicio XXXX \n5. Servicio XXXX</string>

    <!--Strings lista aliados-->
    <string name="listaAliados_cercanos">Mas cercanos</string>
    <string name="listaAliados_menorPrecio">Menor precio</string>
    <string name="listaAliados_mejorCalificados">Mejor calificados</string>
    <string name="listaAliados_nombreAliado">Nombre aliado</string>
    <string name="listaAliados_direccionAliado">Dirección aliado</string>
    <string name="listaAliados_descripcionServicios">Descripción servicios</string>
    <string name="listaAliados_botonDetalles">Detalles</string>
    <string name="listaAliados_botonResenas">Reseñas</string>
    <string name="listaAliados_tipoAliado">Tipo de aliado</string>

    <!--Strings modificar cuenta-->
    <string name="modificarCuenta_cambiarFoto">Cambiar foto de perfil</string>
    <string name="modificarCuenta_labelNombre">Nombre</string>
    <string name="modificarCuenta_labelUsuario">Usuario</string>
    <string name="modificarCuenta_botonGuardar">Guardar</string>

    <!--Strings lista reseñas-->
    <string name="listaResenas_titulo">Reseñas Aliado 1</string>
    <string name="listaResenas_botonTodas">Todas</string>
    <string name="listaResenas_botonPositivas">Positivas</string>
    <string name="listaResenas_negativas">Negativas</string>

    <string name="login_text">Iniciar Sesión</string>
    <string name="user_text">Email</string>
    <string name="password_text">Contraseña</string>
    <string name="go_to_register">No tienes cuenta? <u>Registrate aquí</u></string>
    <string name="go_to_login">Ya tienes cuenta? <u>Inicia sesión aquí</u></string>
    <string name="register_text">Registro</string>
    <string name="user_data">Datos del usuario</string>
    <string name="bici_data">Datos de la bici</string>
    <string name="add_photo">Agregar foto</string>
    <string name="gallery_text">Galeria</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="next">Siguiente</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="brand">Marca</string>
    <string name="color">Color</string>
    <string name="model">Modelo</string>
    <string name="type">Tipo</string>
    <string name="end_register">Finalizar registro</string>
    <string name="details">Nombre\n\nUsuario</string>
    <string name="example_details">Nombre\n\nUsuario</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="bici_details">Editar datos de la bici</string>
    <string name="ver_novedades">Mis novedades</string>
    <string name="logout">Cerrar sesión</string>
    <string name="home">Home</string>
    <string-array name="example">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="brand_bike">
        <item>GW</item>
        <item>BMC</item>
        <item>Pinarello</item>
        <item>Willier</item>
    </string-array>
    <string-array name="color_bike">
        <item>Negro</item>
        <item>Rojo</item>
        <item>Azul</item>
        <item>Gris</item>
    </string-array>
    <string-array name="type_bike">
        <item>Ruta</item>
        <item>Montaña</item>
        <item>BMX</item>
        <item>Ciclocross</item>
    </string-array>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum_tips">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="lorem_ipsum_details_1">Phasellus gravida rutrum fringilla. Phasellus imperdiet dui lacus, ut viverra nisi pulvinar non. Donec dapibus convallis faucibus. Mauris ornare ut ipsum ac varius. Mauris a odio orci. Praesent eleifend dui vitae mauris condimentum imperdiet. Vestibulum dictum sollicitudin libero et rhoncus. Pellentesque eu purus lacinia, posuere augue sit amet, tristique urna. Nullam eu elit eget libero tristique auctor. Pellentesque nisi eros, aliquet eu congue a, commodo nec augue. Proin et ex in felis sodales euismod quis quis diam. Donec sollicitudin malesuada vehicula. Morbi ut nisi eget ex aliquam rhoncus. Integer tincidunt sem nec bibendum dapibus. Integer sit amet elementum velit. Quisque sit amet lorem tempus nunc consequat ullamcorper.</string>
    <string name="lorem_ipsum_details_2">Morbi nunc elit, sollicitudin eleifend eros eget, sagittis gravida urna. Sed auctor metus mi, eu pulvinar metus rutrum pellentesque. Donec suscipit ipsum id mi dapibus posuere. Sed efficitur risus nisi, eu vestibulum ex aliquam sed. Donec eget nulla dolor. Integer luctus eleifend sem, sed commodo est laoreet vitae. Aenean sagittis ex sed dui egestas euismod. Pellentesque posuere nibh tristique ultrices tempus. Aliquam lorem ligula, aliquet eget faucibus ullamcorper, sodales vel enim. Curabitur dui metus, aliquam nec est at, consequat lobortis arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse consequat lobortis porttitor. Duis congue sit amet purus sit amet volutpat. Quisque sit amet cursus lectus. Mauris facilisis vehicula purus, quis maximus diam.</string>
    <string name="edit_bike_picture"><u>Cambiar foto de la bici</u></string>
    <string name="save_bike_edit">Guardar</string>
    <string name="brand_bike">Marca</string>
    <string name="color_bike">Color</string>
    <string name="model_bike">Modelo</string>
    <string name="type_bike">Tipo</string>
    <string name="camera_text">Camara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>