<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_edit_text_rounded"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_aliado"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:padding="5dp"
            android:src="@drawable/profile" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearDatosAliado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/listaAliados_nombreAliado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:text="@string/listaAliados_nombreAliado"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#4d4d4d"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/listaAliados_direccionAliado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/listaAliados_direccionAliado" />

                <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/listaResenas_descripcionResena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/listaAliados_descripcionServicios" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/linearDatosAliado"
                android:gravity="right"
                android:text="@string/listaAliados_tipoAliado" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/listaAliado_contactar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/round_button"
            android:text="@string/detalleAliado_contactar"
            android:textAllCaps="false"
            android:textColor="#00239E"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/phone"
            app:iconSize="20dp"
            app:iconTint="@color/project_blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/listaAliado_Detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/round_button"
            android:text="@string/listaAliados_botonDetalles"
            android:textAllCaps="false"
            android:textColor="#00239E"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/detalle"
            app:iconSize="20dp"
            app:iconTint="@color/project_blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/listaAliado_Resenas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/round_button"
            android:text="@string/listaAliados_botonResenas"
            android:textAllCaps="false"
            android:textColor="#00239E"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            app:icon="@drawable/star"
            app:iconSize="20dp"
            app:iconTint="@color/project_blue" />

    </LinearLayout>
</LinearLayout>